fixed a reference bug and added a few more tasks

--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -19,15 +19,19 @@
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-}
 
+    --section-header-align: center;
+    --section-tagline-transform: uppercase;
+    --section-title-margin: 0;
+    --section-title-color: var(--color-black);
+}
 
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
 
-body a {
+body {
     color: var(--color-black);
 }
 
@@ -47,6 +51,16 @@ h1 h2 h3 h4 h5 h6 {
     display: none;
 }
 
+.section-header {
+    text-align: var(--section-header-align);
+}
+
 .card-category .section-tagline {
     color: var(--color-primary);
+}
+
+.section-tagline {
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
+    text-transform: var(--section-tagline-transform)
 }
