--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -4,7 +4,7 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: color-black;
+    --text-color: --color-black;
 }
 
 html {
@@ -12,7 +12,7 @@ html {
 }
 
 body a {
-    color: var(color-black);
+    color: var(--color-black);
 }
 
 .visually-hidden {
@@ -20,5 +20,5 @@ body a {
 }
 
 .card-category .section-tagline {
-    color: var(color-primary);
+    color: var(--color-primary);
 }
