--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -19,6 +19,8 @@
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
+
+    --section-header-align: center;
 }
 
 
@@ -27,7 +29,7 @@ html {
     font-size: 62.5%;
 }
 
-body a {
+body {
     color: var(--color-black);
 }
 
@@ -45,6 +47,10 @@ h1 h2 h3 h4 h5 h6 {
 
 .visually-hidden {
     display: none;
+}
+
+.section-header {
+    text-align: var(--section-header-align);
 }
 
 .card-category .section-tagline {
