--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -4,7 +4,7 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: color-black;
+    --text-color: --color-black;
 
     --font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -22,7 +22,7 @@ html {
 }
 
 body a {
-    color: var(color-black);
+    color: var(--color-black);
 }
 
 body {
@@ -39,5 +39,5 @@ h1 h2 h3 h4 h5 h6 {
 }
 
 .card-category .section-tagline {
-    color: var(color-primary);
+    color: var(--color-primary);
 }
