--- a/0x02-CSS_advanced/styles/7-styles.css
+++ b/0x02-CSS_advanced/styles/7-styles.css
@@ -4,7 +4,7 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: color-black;
+    --text-color: --color-black;
 
     --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -24,7 +24,7 @@ html {
 }
 
 body a {
-    color: var(color-black);
+    color: var(--color-black);
 }
 
 body {
@@ -43,5 +43,5 @@ h1 h2 h3 h4 h5 h6 {
 }
 
 .card-category .section-tagline {
-    color: var(color-primary);
+    color: var(--color-primary);
 }
