--- a/0x02-CSS_advanced/styles/9-style.css
+++ b/0x02-CSS_advanced/styles/9-style.css
@@ -31,6 +31,10 @@ body a {
     color: var(--color-black);
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
