--- a/0x02-CSS_advanced/styles/11-style.css
+++ b/0x02-CSS_advanced/styles/11-style.css
@@ -12,7 +12,7 @@
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
-    --font-size-x-large: 4.8rem;
+    --font-size-xx-large: 4.8rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
 
@@ -30,8 +30,12 @@ html {
     font-size: 62.5%;
 }
 
-body {
+body a {
     color: var(--color-black);
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
