--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -21,8 +21,10 @@
     --line-height-big: 1.8;
 
     --section-header-align: center;
+    --section-tagline-transform: uppercase;
+    --section-title-margin: 0;
+    --section-title-color: --color-black;
 }
-
 
 html {
     scroll-behavior: smooth;
@@ -33,8 +35,20 @@ body a {
     color: var(--color-black);
 }
 
-a {
+a:any-link {
     text-decoration: none;
+}
+
+a:visited {
+    font-style: italic;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    background-color: var(--color-light-grey);
 }
 
 body {
@@ -59,4 +73,18 @@ h1 h2 h3 h4 h5 h6 {
 
 .card-category .section-tagline {
     color: var(--color-primary);
+}
+
+.section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
+}
+
+.section-tagline {
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
+    text-transform: var(--section-tagline-transform)
 }
