body a {} is a big bug, gonna refactor all files

--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -1,8 +1,12 @@
 html {
     scroll-behavior: smooth;
+  }
+
+body {
+    color: #161616;
 }
 
-body a {
+a {
     color: #161616;
 }
 
@@ -10,6 +14,10 @@ body a {
     display: none;
 }
 
-.card-category .section-tagline {
+.card-category {
+    color: #D73953;
+}
+
+.section-tagline {
     color: #D73953;
 }
