--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -15,12 +15,13 @@ html {
     scroll-behavior: smooth;
 }
 
-body a {
+body {
     color: var(--color-black);
+    font-family: var(--font-family-base);
 }
 
-body {
-    font-family: var(--font-family-base);
+a {
+    color: var(--color-black);
 }
 
 h1 h2 h3 h4 h5 h6 {
@@ -31,6 +32,10 @@ h1 h2 h3 h4 h5 h6 {
     display: none;
 }
 
-.card-category .section-tagline {
+.card-category {
+    color: var(--color-primary);
+}
+
+.section-tagline {
     color: var(--color-primary);
 }
