--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -4,21 +4,29 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: --color-black;
+    --text-color: var(--color-black);
 }
 
 html {
     scroll-behavior: smooth;
+  }
+
+body {
+    color: var(--text-color);
 }
 
-body a {
-    color: var(--color-black);
+a {
+    color: var(--text-color);
 }
 
 .visually-hidden {
     display: none;
 }
 
-.card-category .section-tagline {
+.card-category {
+    color: var(--color-primary);
+}
+
+.section-tagline {
     color: var(--color-primary);
 }
