--- a/0x02-CSS_advanced/styles/7-styles.css
+++ b/0x02-CSS_advanced/styles/7-styles.css
@@ -5,9 +5,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: --color-black;
-
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; 
+    --font-family-title: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -17,31 +16,35 @@
     --font-weight-bold: 700;
 }
 
-
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
-}
-
-body a {
-    color: var(--color-black);
-}
+  }
 
 body {
+    color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
 }
 
-h1 h2 h3 h4 h5 h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
+}
+
+a {
+    color: var(--text-color);
 }
 
 .visually-hidden {
     display: none;
 }
 
-.card-category .section-tagline {
+.card-category {
+    color: var(--color-primary);
+}
+
+.section-tagline {
     color: var(--color-primary);
 }
