--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -5,9 +5,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: --color-black;
-
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; 
+    --font-family-title: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -15,52 +14,48 @@
     --font-size-xx-large: 4.8rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
-
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-
     --section-header-align: center;
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
-    --section-title-color: --color-black;
+    --section-title-color: var(--color-black);
 }
 
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
-}
-
-body a {
-    color: var(--color-black);
-}
-
-a {
-    text-decoration: none;
-}
+  }
 
 body {
+    color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
+    line-height: min(var(--line-height-base));
 }
 
-h1 h2 h3 h4 h5 h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
+}
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
 }
 
 .visually-hidden {
     display: none;
 }
 
-.section-header {
-    text-align: var(--section-header-align);
+.card-category {
+    color: var(--color-primary);
 }
 
-.card-category .section-tagline {
-    color: var(--color-primary);
+.section-header{
+    text-align: var(--section-header-align);
 }
 
 .section-title {
@@ -72,7 +67,8 @@ h1 h2 h3 h4 h5 h6 {
 }
 
 .section-tagline {
+    color: var(--color-primary);
     font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
-    text-transform: var(--section-tagline-transform)
 }
