--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -7,10 +7,9 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: --color-black;
-
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --text-color: var(--color-black);
+    --font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; 
+    --font-family-title: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -18,36 +17,45 @@
     --font-size-xx-large: 4.8rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
-
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-
     --section-header-align: center;
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
-    --section-title-color: --color-black;
+    --section-title-color: var(--color-black);
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
     --section-footer-padding: 3rem 0 0;
+    --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
 }
 
-* {
+*, *:before, *:after {
     box-sizing: border-box;
 }
 
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
+  }
+
+body {
+    color: var(--text-color);
+    font-family: var(--font-family-base);
+    font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
+    line-height: var(--line-height-base);
 }
 
-body a {
-    color: var(--color-black);
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
-a:any-link {
+a:link {
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -63,20 +71,12 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-body {
-    font-family: var(--font-family-base);
-    font-size: var(--font-size-medium);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
-}
-
-h1 h2 h3 h4 h5 h6 {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-}
-
 .visually-hidden {
     display: none;
+}
+
+.card-category {
+    color: var(--color-primary);
 }
 
 .section {
@@ -85,7 +85,7 @@ h1 h2 h3 h4 h5 h6 {
 
 .section-header {
     text-align: var(--section-header-align);
-    padding: var(--section-header-padding)
+    padding: var(--section-header-padding);
 }
 
 .section-body {
@@ -94,11 +94,7 @@ h1 h2 h3 h4 h5 h6 {
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: section-footer-align;
-}
-
-.card-category .section-tagline {
-    color: var(--color-primary);
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
@@ -110,14 +106,16 @@ h1 h2 h3 h4 h5 h6 {
 }
 
 .section-tagline {
+    color: var(--color-primary);
     font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
-    text-transform: var(--section-tagline-transform)
 }
 
 .container {
     width: 960px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer {
