17 doesn't check unless you paste normalize.css how bizarre

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -2,160 +2,160 @@
 html {
     line-height:1.15;
     -webkit-text-size-adjust:100%;
-  }
+}
   
-  body {
+body {
     margin:0;
-  }
+}
   
-  main {
+main {
     display:block;
-  }
+}
   
-  h1 {
+h1 {
     font-size:2em;
     margin:.67em 0;
-  }
-  
-  hr {
+}
+
+hr {
     box-sizing:content-box;
     height:0;
     overflow:visible;
-  }
+}
   
-  pre {
+pre {
     font-family:monospace,monospace;
     font-size:1em;
-  }
+}
   
-  a {
+a {
     background-color:transparent;
-  }
+}
   
-  abbr[title] {
+abbr[title] {
     border-bottom:none;
     text-decoration:underline;
     text-decoration:underline dotted;
-  }
+}
   
-  b, strong {
+b, strong {
     font-weight:bolder;
-  }
+}
   
-  code,kbd,samp {
+code,kbd,samp {
     font-family:monospace,monospace;
     font-size:1em;
-  }
+}
   
-  small {
+small {
     font-size:80%;
-  }
+}
   
-  sub,sup {
+sub,sup {
     font-size:75%;
     line-height:0;
     position:relative;
     vertical-align:baseline;
-  }
+}
   
-  sub {
+sub {
     bottom:-.25em;
-  }
+}
   
-  sup {
+sup {
     top:-.5em;
-  }
+}
   
-  img {
+img {
     border-style:none;
-  }
+}
   
-  button,input,optgroup,select,textarea {
+button,input,optgroup,select,textarea {
     font-family:inherit;
     font-size:100%;
     line-height:1.15;
     margin:0;
-  }
+}
   
-  button,input {
+button,input {
     overflow:visible;
-  }
+}
   
-  button,select {
+button,select {
     text-transform:none;
-  }
+}
   
-  [type=button],[type=reset],[type=submit],button {
+[type=button],[type=reset],[type=submit],button {
     -webkit-appearance:button;
-  }
+}
   
-  [type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner {
+[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner {
     border-style:none;
     padding:0
-  }
+}
   
-  [type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring {
+[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring {
     outline:1px dotted ButtonText;
-  }
+}
   
-  fieldset {
+fieldset {
     padding:.35em .75em .625em;
-  }
+}
   
-  legend {
+legend {
     box-sizing:border-box;
     color:inherit;
     display:table;
     max-width:100%;
     padding:0;
     white-space:normal;
-  }
+}
   
-  progress {
+progress {
     vertical-align:baseline;
-  }
+}
   
-  textarea {
+textarea {
     overflow:auto;
-  }
+}
   
-  [type=checkbox],[type=radio] {
+[type=checkbox],[type=radio] {
     box-sizing:border-box;
     padding:0;
-  }
+}
   
-  [type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button {
     height:auto;
-  }
+}
   
-  [type=search] {
+[type=search] {
     -webkit-appearance:textfield;
     outline-offset:-2px;
-  }
+}
   
-  [type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button {
+[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button {
     -webkit-appearance:button;
     font:inherit;
-  }
+}
   
-  details {
+details {
     display:block;
-  }
+}
   
-  summary {
+summary {
     display:list-item;
-  }
+}
   
-  template {
+template {
     display:none;
-  }
+}
   
-  [hidden] {
+[hidden] {
     display:none;
-  }
-  /*# sourceMappingURL=normalize.min.css.map */
+}
+/*# sourceMappingURL=normalize.min.css.map */
   
-  :root {
+:root {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
@@ -184,100 +184,94 @@ html {
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
-  }
+}
   
-  *,
-  *:before,
-  *:after {
+*, *:before, *:after {
     box-sizing: border-box;
-  }
+}
   
-  html {
+html {
       scroll-behavior: smooth;
       font-size: 62.5%;
-  }
+}
   
-  body {
+body {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
-  }
+}
   
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
-  }
+}
   
-  a:link {
+a:link {
     color: var(--text-color);
     text-decoration: none;
-  }
+}
   
-  a:visited {
+a:visited {
     font-style: italic;
-  }
+}
   
-  a:hover {
+a:hover {
     text-decoration: underline;
-  }
+}
   
-  a:active {
+a:active {
     background-color: var(--color-light-grey);
-  }
+}
   
-  .visually-hidden {
+.visually-hidden {
     display: none;
-  }
+}
   
-  .card-category {
+.card-category {
     color: var(--color-primary);
-  }
+}
   
-  .section {
+.section {
     padding: var(--section-padding);
-  }
-  .section-header {
+}
+
+.section-header {
     text-align: var(--section-header-align);
     padding: var(--section-header-padding);
-  }
+}
   
-  .section-body {
+.section-body {
     padding: var(--section-body-padding);
-  }
+}
   
-  .section-footer {
+.section-footer {
     padding: var(--section-footer-padding);
     text-align: var(--section-footer-align);
-  }
+}
   
-  .section-title {
+.section-title {
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
     font-weight: var(--font-weight-bold);
     margin: var(--section-title-margin);
     color: var(--section-title-color);
-  }
+}
   
-  .section-tagline {
+.section-tagline {
     color: var(--color-primary);
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
-  }
+}
   
-  .container {
+.container {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
-  }
+}
   
-  .footer {
+.footer {
     padding: var(--footer-padding);
-  }
+}
