--- a/0x02-CSS_advanced/styles/20-style.css
+++ b/0x02-CSS_advanced/styles/20-style.css
@@ -8,9 +8,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: --color-black;
-
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; 
+    --font-family-title: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -18,29 +17,27 @@
     --font-size-xx-large: 4.8rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
-
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-
     --section-header-align: center;
     --section-tagline-transform: uppercase;
-    --section-tagline-margin: 0;
     --section-title-margin: 0;
-    --section-title-color: --color-black;
+    --section-title-color: var(--color-black);
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
     --section-footer-padding: 3rem 0 0;
+    --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
-
-    --nav-item-font-family: --font-family-title;
-    --nav-item-font-weight: --font-weight-bold;
-    --nav-item-font-size: --font-size-medium;
+    --nav-item-font-family: var(--font-family-title);
+    --nav-item-font-weight: var(--font-weight-bold);
+    --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: --color-primary;
+    --nav-item-link-hover: var(--color-primary);
+    --section-tagline-margin: 0;
 }
 
 * {
@@ -50,13 +47,23 @@
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
+  }
+
+body {
+    color: var(--text-color);
+    font-family: var(--font-family-base);
+    font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
+    line-height: min(var(--line-height-base));
 }
 
-body a {
-    color: var(--color-black);
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
 a:any-link {
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -72,22 +79,10 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-body {
-    font-family: var(--font-family-base);
-    font-size: var(--font-size-medium);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
-}
-
-h1 h2 h3 h4 h5 h6 {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-}
-
-ul .row {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    list-style-type: none;
+ul.row {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 .col-1-3 {
@@ -102,23 +97,13 @@ ul .row {
     padding: .5rem;
 }
 
-.row::after {
-    content: normal;
-    display: table;
-    clear: both;
-}
-
-.visually-hidden {
-    display: none;
-}
-
 .navbar-menu {
     float: right;
 }
 
 .nav {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     text-align: center;
 }
@@ -137,30 +122,34 @@ ul .row {
     padding: .5rem 1rem .5rem 1rem;
 }
 
-.nav .nav-link:hover {
+.nav .nav-link:hover{
     color: var(--nav-item-link-hover);
+}
+
+.visually-hidden {
+    display: none;
+}
+
+.card-category {
+    color: var(--color-primary);
 }
 
 .section {
     padding: var(--section-padding);
 }
 
-.section-header {
+.section-header{
     text-align: var(--section-header-align);
-    padding: var(--section-header-padding)
+    padding: var(--section-header-padding);
 }
 
-.section-body {
+.section-body{
     padding: var(--section-body-padding);
 }
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: section-footer-align;
-}
-
-.card-category .section-tagline {
-    color: var(--color-primary);
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
@@ -172,9 +161,11 @@ ul .row {
 }
 
 .section-tagline {
+    color: var(--color-primary);
     font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
-    text-transform: var(--section-tagline-transform)
+    margin: var(--section-tagline-margin);
 }
 
 .container {
@@ -194,4 +185,11 @@ ul .row {
 
 .footer ul {
     text-align: right;
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+    background-color: #d73953;
 }
