--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -1,47 +1,5 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
-/*# sourceMappingURL=normalize.min.css.map */
-
-:root {
-    --color-primary: #d73953;
-    --color-black: #090909;
-    --color-white: #ffffff;
-    --color-light-grey: #f3f3f3;
-    --color-dark-grey: #353535;
-    --text-color: --color-black;
-
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-size-small: 1.2rem;
-    --font-size-medium: 1.6rem;
-    --font-size-large: 1.8rem;
-    --font-size-x-large: 2.3rem;
-    --font-size-xx-large: 4.8rem;
-    --font-weight-regular: 400;
-    --font-weight-bold: 700;
-
-    --line-height-small: 1.2;
-    --line-height-base: 1.5;
-    --line-height-big: 1.8;
-
-    --section-header-align: center;
-    --section-tagline-transform: uppercase;
-    --section-tagline-margin: 0;
-    --section-title-margin: 0;
-    --section-title-color: --color-black;
-    --section-padding: 5rem 0;
-    --section-header-padding: 0 0 3rem;
-    --section-body-padding: 0 0 3rem;
-    --section-footer-padding: 3rem 0 0;
-    --footer-padding: 5rem 0 1rem;
-
-    --nav-item-font-family: --font-family-title;
-    --nav-item-font-weight: --font-weight-bold;
-    --nav-item-font-size: --font-size-medium;
-    --nav-item-letter-spacing: 0.04rem;
-    --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: --color-primary;
-}
+/* Import normalize.css */
+@import 'normalize.css';
 
 :root {
     --color-primary: #d73953;
@@ -50,8 +8,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; 
-    --font-family-title: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -66,6 +24,7 @@
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
     --section-title-color: var(--color-black);
+    --section-header-align: center;
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
@@ -75,22 +34,25 @@
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 0.04rem;
+    --nav-item-letter-spacing: .04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
     --section-tagline-margin: 0;
 }
 
+/* Universal box sizing rule */
 *, *:before, *:after {
     box-sizing: border-box;
 }
 
+/* Effortless transitions when scrolling */
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
-  }
+}
 
+/* Assign font properties to body and headings */
 body {
     color: var(--text-color);
     font-family: var(--font-family-base);
@@ -104,6 +66,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: var(--font-weight-bold);
 }
 
+/* Style link pseudo classes */
 a:link {
     color: var(--text-color);
     text-decoration: none;
@@ -121,28 +84,71 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-ul.row {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.visually-hidden {
+    display: none;
 }
 
-.col-1-3 {
-    width: 33.33%;
-    float: left;
-    padding: 0.5rem;
+.card-category {
+    color: var(--color-primary);
 }
 
-.col-1-2 {
-    width: 50%;
-    float: left;
-    padding: 0.5rem;
+/* Set padding for section class*/
+.section {
+    padding: var(--section-padding);
+}
+
+/* Center and set padding for section header */
+.section-header {
+    padding: var(--section-header-padding);
+    text-align: var(--section-header-align);
+}
+
+/* Set padding for section-body */
+.section-body {
+    padding: var(--section-body-padding);
+}
+
+/* Set properties for section-footer */
+.section-footer {
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
+}
+
+/* Set properties for section-title */
+.section-title {
+    color: var(--section-title-color);
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+}
+
+/* Add custom text-transform property */
+.section-tagline {
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-tagline-margin);
+    text-transform: var(--section-tagline-transform);
+}
+
+/* Styling for container class */
+.container {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Set padding for footer class */
+.footer {
+    padding: var(--footer-padding);
 }
 
 .navbar-menu {
     float: right;
 }
 
+/* Styling for nav and descendants */
 .nav {
     margin: 0;
     padding: 0;
@@ -161,63 +167,30 @@ ul.row {
 
 .nav .nav-link {
     display: block;
-    padding: .5rem 1rem .5rem 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .nav .nav-link:hover {
     color: var(--nav-item-link-hover);
 }
 
-.visually-hidden {
-    display: none;
+/* Grid styling for element below */
+ul.row {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-.card-category {
-    color: var(--color-primary);
+.col-1-3 {
+    width: 33.33%;
+    float: left;
+    padding: .5rem;
 }
 
-.section {
-    padding: var(--section-padding);
-}
-
-.section-header {
-    text-align: var(--section-header-align);
-    padding: var(--section-header-padding);
-}
-
-.section-body {
-    padding: var(--section-body-padding);
-}
-
-.section-footer {
-    padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align);
-}
-
-.section-title {
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-title-margin);
-    color: var(--section-title-color);
-}
-
-.section-tagline {
-    color: var(--color-primary);
-    font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-tagline-margin);
-}
-
-.container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.footer {
-    padding: var(--footer-padding);
+.col-1-2 {
+    width: 50%;
+    float: left;
+    padding: .5rem;
 }
 
 .footer-copyright {
@@ -226,6 +199,6 @@ ul.row {
     color: var(--text-color);
 }
 
-ul.footer {
+.footer ul {
     text-align: right;
 }
