--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -92,19 +92,15 @@ ul .row {
 
 .col-1-3 {
     width: 33.33%;
-    float: left;
-    padding: .5rem;
 }
 
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: .5rem;
 }
 
 [class*='col-'] {
     float: left;
-    padding: .5rem;
+    padding: 0.5rem;
 }
 
 .row::after {
