fixing some old bugs before i check

--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -7,7 +7,7 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: --color-black;
+    --text-color: var(--color-black);
 
     --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -27,30 +27,30 @@
     --section-tagline-transform: uppercase;
     --section-tagline-margin: 0;
     --section-title-margin: 0;
-    --section-title-color: --color-black;
+    --section-title-color: var(--color-black);
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
     --section-footer-padding: 3rem 0 0;
     --footer-padding: 5rem 0 1rem;
 
-    --nav-item-font-family: --font-family-title;
-    --nav-item-font-weight: --font-weight-bold;
-    --nav-item-font-size: --font-size-medium;
+    --nav-item-font-family: var(--font-family-title);
+    --nav-item-font-weight: var(--font-weight-bold);
+    --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: --color-primary;
+    --nav-item-link-hover: var(--color-primary);
 
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
     --button-border: 0.2rem solid var(--color);
-    --button-color: --color-black;
+    --button-color: var(--color-black);
     --button-text-decoration: none;
-    --button-font-size: --font-size-large;
-    --button-hover-color: --color-white;
+    --button-font-size: var(--font-size-large);
+    --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
-    --button-hover-background: --color-primary;
+    --button-hover-background: var(--color-primary);
 
     --header-padding: 4rem 0 0;
     --header-logo-position: relative;
@@ -263,7 +263,7 @@ ul .row {
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: section-footer-align;
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
