--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -60,7 +60,7 @@
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
     background-color: var(--color-black);
-    --button-color: --color-white;
+    --button-color: var(--color-white);
 }
 
 *, *:before, *:after {
