--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -146,7 +146,7 @@ ul.row {
 }
 
 .nav .nav-link::before {
-    content: normal;
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
