left out :hover on last declaration

--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -390,6 +390,6 @@ ul.row {
     transform: scale(1.2);
 }
 
-.card-work .card-outer {
+.card-work:hover .card-outer {
     transform: scale(.95);
 }
