--- a/0x03-sass_scss/3-nested_tag.scss
+++ b/0x03-sass_scss/3-nested_tag.scss
@@ -1,7 +1,7 @@
 // Write a Sass file that uses nested declarations
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     p {
         margin: 10px;
     }
