added the classes to ul post-meta-list

--- a/0x04-flexbox/13-styles.css
+++ b/0x04-flexbox/13-styles.css
@@ -585,7 +585,7 @@
     flex-direction: column;
   }
 
-  .post-meta-lilst strong {
+  .post-meta-list strong {
     color: var(--color-primary);
     font-size: var(--font-size-small);
     text-transform: uppercase;
