--- a/0x07-accessibility/skip-links/01-styles.css
+++ b/0x07-accessibility/skip-links/01-styles.css
@@ -188,6 +188,29 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
+  .off-screen {
+    left: -100vw;
+    position: absolute;
+  }
+
+  .skip-link {
+    background: var(--color-black);
+    color: var(--color-white);
+    left: 0;
+    padding: .7rem;
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    z-index: 10;
+    transform: translateY(-1rem);
+    transition: trasnform .2s ease-in-out, opacity .2s ease-in-out;
+  }
+
+  skip-link:focus {
+    opacity: 1;
+    transform: translateY(0);
+  }
   
   /*** 2. LAYOUT ***/
   
@@ -663,6 +686,7 @@
   .card-work .card-title {
     text-align: center;
     margin: 0;
+    opacity: 0;
     height: 100%;
     position: relative;
   }
@@ -681,16 +705,9 @@
     bottom: 0;
     content: '';
   }
-
-  .card-work .card-title a {
-    opacity: 0;
-  }
-
-  .card-work .card-title a:focus,
-  .card-work:hover .card-title a {
+  
+  .card-work:hover .card-title {
     opacity: 1;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7)
   }
   
   @media only screen and (max-width: 767px) {
@@ -707,6 +724,10 @@
     .card-work .card-title a {
       display: block;
       padding: 2rem 1rem 0 1rem;
+    }
+  
+    .card-work:hover .card-inner {
+      background-color: transparent;
     }
   
     .card-work:hover .card-image {
