--- a/0x07-accessibility/skip-links/01-styles.css
+++ b/0x07-accessibility/skip-links/01-styles.css
@@ -204,10 +204,10 @@
     top: 0;
     z-index: 10;
     transform: translateY(-1rem);
-    transition: trasnform .2s ease-in-out, opacity .2s ease-in-out;
+    transition: transform .2s ease-in-out, opacity .2s ease-in-out;
   }
 
-  skip-link:focus {
+  .skip-link:focus {
     opacity: 1;
     transform: translateY(0);
   }
@@ -679,14 +679,9 @@
     transition: var(--transition-duration) var(--transition-cubic-bezier);
   }
   
-  .card-work:hover .card-inner {
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-  
   .card-work .card-title {
     text-align: center;
     margin: 0;
-    opacity: 0;
     height: 100%;
     position: relative;
   }
@@ -706,8 +701,11 @@
     content: '';
   }
   
-  .card-work:hover .card-title {
+  .card-work .card-title a:focus,
+  .card-work:hover .card-title a {
     opacity: 1;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
   }
   
   @media only screen and (max-width: 767px) {
